--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "repository": "https://github.com/elc1090/project2-gabriel-caetano.git",
   "author": "Gabriel Caetano <gvcaetano@inf.ufsm.br>",
   "license": "MIT",
-  "scripts":{
-    "build": "npx tsc",
-    "start": "node build/index"
+  "scripts": {
+    "build": "rimraf ./build && tsc",
+    "start": "npm run build && node build/index.js",
+    "dev": "npx nodemon"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "@types/pg": "^8.6.6",
+    "nodemon": "^2.0.22",
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.10.0"
   }
 }
