--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "npx nodemon"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.6.6",
@@ -20,6 +21,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "express": "^4.18.2",
     "pg": "^8.10.0"
   }
